# PaperTrace

./: README.md  config.py  main.py  pyproject.toml
application/: exceptions.py  interfaces.py  models.py  pipeline.py  runner.py
application/infra/: agents.py  mirascope.py  pdf_parser.py  sqlite_repo.py
tests/: conftest.py  test_evals.py
